Changes from main applied
Signed-off-by: Stevan Buzejic <buzejic.stevan@gmail.com>