@@ -12,14 +12,18 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import org.apache.http.HttpStatus;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.message.BasicHeader;
 import org.junit.Assert;
 import org.opensearch.client.Request;
+import org.opensearch.client.Requests;
 import org.opensearch.client.Response;
 import org.opensearch.client.ResponseException;
+import org.opensearch.cluster.health.ClusterHealthStatus;
+import org.opensearch.commons.alerting.model.Monitor.MonitorType;
 import org.opensearch.commons.alerting.model.action.Action;
 import org.opensearch.rest.RestStatus;
 import org.opensearch.search.SearchHit;
@@ -28,18 +32,21 @@ import org.opensearch.securityanalytics.SecurityAnalyticsRestTestCase;
 import org.opensearch.securityanalytics.action.AlertDto;
 import org.opensearch.securityanalytics.config.monitors.DetectorMonitorConfig;
 import org.opensearch.securityanalytics.model.Detector;
+import org.opensearch.securityanalytics.model.Detector.DetectorType;
 import org.opensearch.securityanalytics.model.DetectorInput;
 import org.opensearch.securityanalytics.model.DetectorRule;
 import org.opensearch.securityanalytics.model.DetectorTrigger;
 
 import static org.opensearch.securityanalytics.TestHelpers.netFlowMappings;
 import static org.opensearch.securityanalytics.TestHelpers.randomAction;
+import static org.opensearch.securityanalytics.TestHelpers.randomAggregationRule;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetectorType;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetectorWithInputsAndTriggers;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetectorWithTriggers;
 import static org.opensearch.securityanalytics.TestHelpers.randomDoc;
 import static org.opensearch.securityanalytics.TestHelpers.randomIndex;
 import static org.opensearch.securityanalytics.TestHelpers.randomRule;
+import static org.opensearch.securityanalytics.TestHelpers.windowsDetectorType;
 import static org.opensearch.securityanalytics.TestHelpers.windowsIndexMapping;
 import static org.opensearch.securityanalytics.settings.SecurityAnalyticsSettings.ALERT_HISTORY_INDEX_MAX_AGE;
 import static org.opensearch.securityanalytics.settings.SecurityAnalyticsSettings.ALERT_HISTORY_MAX_DOCS;
@@ -55,7 +62,7 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String rule = randomRule();
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.RULE_BASE_URI, Collections.singletonMap("category", randomDetectorType()),
-                new StringEntity(rule), new BasicHeader("Content-Type", "application/json"));
+            new StringEntity(rule), new BasicHeader("Content-Type", "application/json"));
         Assert.assertEquals("Create rule failed", RestStatus.CREATED, restStatus(createResponse));
 
         Map<String, Object> responseBody = asMap(createResponse);
@@ -66,10 +73,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -79,8 +86,8 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Action triggerAction = randomAction(createDestination());
 
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(createdId)),
-                        getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()))),
-                List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(createdId), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
+                getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()), new ArrayList<>())),
+            List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(createdId), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
 
         createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
         Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
@@ -90,12 +97,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         createdId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -120,7 +127,7 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
                 for (Map.Entry<String, Object> actionResult: actionResults.entrySet()) {
                     Map<String, String> actionOutput = ((Map<String, Map<String, String>>) actionResult.getValue()).get("output");
                     String expectedMessage = triggerAction.getSubjectTemplate().getIdOrCode().replace("{{ctx.detector.name}}", detector.getName())
-                            .replace("{{ctx.trigger.name}}", "test-trigger").replace("{{ctx.trigger.severity}}", "1");
+                        .replace("{{ctx.trigger.name}}", "test-trigger").replace("{{ctx.trigger.severity}}", "1");
 
                     Assert.assertEquals(expectedMessage, actionOutput.get("subject"));
                     Assert.assertEquals(expectedMessage, actionOutput.get("message"));
@@ -129,11 +136,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         }
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -152,10 +159,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         params = new HashMap<>();
         String body = String.format(Locale.getDefault(), "{\"alerts\":[\"%s\"]}", alertId);
         Request post = new Request("POST", String.format(
-                Locale.getDefault(),
-                "%s/%s/_acknowledge/alerts",
-                SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
-                detectorId));
+            Locale.getDefault(),
+            "%s/%s/_acknowledge/alerts",
+            SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
+            detectorId));
         post.setJsonEntity(body);
         Response ackAlertsResponse = client().performRequest(post);
         assertNotNull(ackAlertsResponse);
@@ -166,7 +173,7 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
     }
 
     public void testGetAlerts_noDetector_failure() throws IOException {
-         // Call GetAlerts API
+        // Call GetAlerts API
         Map<String, String> params = new HashMap<>();
         params.put("detector_id", "nonexistent_detector_id");
         try {
@@ -184,10 +191,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -197,14 +204,14 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Action triggerAction = randomAction(createDestination());
 
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(),
-                        getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()))),
-                List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
+                getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()), new ArrayList<>())),
+            List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
 
         Detector detector1 = randomDetectorWithInputsAndTriggers(List.of(new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(),
-                        getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()))),
-                List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
+                getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()), new ArrayList<>())),
+            List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
 
         Response createResponse1 = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector1));
         Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
@@ -215,12 +222,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String id1 = asMap(createResponse1).get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -238,11 +245,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(5, noOfSigmaRuleMatches);
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -260,10 +267,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         params = new HashMap<>();
         String body = String.format(Locale.getDefault(), "{\"alerts\":[\"%s\"]}", alertId);
         Request post = new Request("POST", String.format(
-                Locale.getDefault(),
-                "%s/%s/_acknowledge/alerts",
-                SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
-                id1));
+            Locale.getDefault(),
+            "%s/%s/_acknowledge/alerts",
+            SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
+            id1));
         post.setJsonEntity(body);
 
         try {
@@ -280,7 +287,7 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String rule = randomRule();
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.RULE_BASE_URI, Collections.singletonMap("category", randomDetectorType()),
-                new StringEntity(rule), new BasicHeader("Content-Type", "application/json"));
+            new StringEntity(rule), new BasicHeader("Content-Type", "application/json"));
         Assert.assertEquals("Create rule failed", RestStatus.CREATED, restStatus(createResponse));
 
         Map<String, Object> responseBody = asMap(createResponse);
@@ -291,10 +298,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -304,8 +311,8 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Action triggerAction = randomAction(createDestination());
 
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(createdId)),
-                        getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()))),
-                List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(createdId), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
+                getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()), Collections.emptyList())),
+            List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(createdId), List.of(), List.of("attack.defense_evasion"), List.of(triggerAction))));
 
         createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
         Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
@@ -315,12 +322,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         createdId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -345,7 +352,7 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
                 for (Map.Entry<String, Object> actionResult: actionResults.entrySet()) {
                     Map<String, String> actionOutput = ((Map<String, Map<String, String>>) actionResult.getValue()).get("output");
                     String expectedMessage = triggerAction.getSubjectTemplate().getIdOrCode().replace("{{ctx.detector.name}}", detector.getName())
-                            .replace("{{ctx.trigger.name}}", "test-trigger").replace("{{ctx.trigger.severity}}", "1");
+                        .replace("{{ctx.trigger.name}}", "test-trigger").replace("{{ctx.trigger.severity}}", "1");
 
                     Assert.assertEquals(expectedMessage, actionOutput.get("subject"));
                     Assert.assertEquals(expectedMessage, actionOutput.get("message"));
@@ -354,11 +361,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         }
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -376,10 +383,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String detectorId = (String) ((ArrayList<HashMap<String, Object>>) getAlertsBody.get("alerts")).get(0).get("detector_id");
         String body = String.format(Locale.getDefault(), "{\"alerts\":[\"%s\"]}", alertId);
         Request post = new Request("POST", String.format(
-                Locale.getDefault(),
-                "%s/%s/_acknowledge/alerts",
-                SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
-                java.util.UUID.randomUUID()));
+            Locale.getDefault(),
+            "%s/%s/_acknowledge/alerts",
+            SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
+            java.util.UUID.randomUUID()));
         post.setJsonEntity(body);
 
         try {
@@ -390,10 +397,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
 
         body = String.format(Locale.getDefault(), "{\"alerts\":[\"%s\"]}", java.util.UUID.randomUUID());
         post = new Request("POST", String.format(
-                Locale.getDefault(),
-                "%s/%s/_acknowledge/alerts",
-                SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
-                detectorId));
+            Locale.getDefault(),
+            "%s/%s/_acknowledge/alerts",
+            SecurityAnalyticsPlugin.DETECTOR_BASE_URI,
+            detectorId));
         post.setJsonEntity(body);
     }
 
@@ -404,10 +411,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -423,12 +430,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String createdId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -444,11 +451,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(5, noOfSigmaRuleMatches);
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -464,6 +471,244 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(1, getAlertsBody.get("total_alerts"));
     }
 
+    public void testGetAlerts_byDetectorType_multipleDetectorTypes_success() throws IOException, InterruptedException {
+        String testOpCode = "Test";
+
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response response = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + windowsDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        response = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+
+        List<String> prepackagedRules = getRandomPrePackagedRules();
+        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String randomDocRuleId = createRule(randomRule(), "windows");
+
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId)),
+            prepackagedRules.stream().map(DetectorRule::new).collect(Collectors.toList()), List.of(DetectorType.TEST_WINDOWS, DetectorType.WINDOWS));
+
+        Detector detector = randomDetectorWithTriggers(input, List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(windowsDetectorType(), randomDetectorType()), List.of(), List.of(), List.of(), List.of())));
+
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+
+        String createdId = responseBody.get("_id").toString();
+
+        String request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List<String> monitorIds = ((List<String>) (detectorMap).get("monitor_id"));
+        assertEquals(3, monitorIds.size());
+
+        indexDoc(index, "1", randomDoc(5, 3, testOpCode));
+        indexDoc(index, "2", randomDoc(2, 3, testOpCode));
+        indexDoc(index, "3", randomDoc(4, 3, testOpCode));
+        indexDoc(index, "4", randomDoc(6, 2, testOpCode));
+        indexDoc(index, "5", randomDoc(1, 1, testOpCode));
+
+        client().performRequest(new Request("POST", "_refresh"));
+        Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
+
+        Map<String, String> docLevelMonitorIdPerCategory = ((Map<String, String>)((Map<String, Object>)hit.getSourceAsMap().get("detector")).get("doc_monitor_id_per_category"));
+        // Swapping keys and values
+        Map<String, String> ruleIdRuleCategoryMap =  docLevelMonitorIdPerCategory.entrySet().stream().collect(Collectors.toMap(Map.Entry::getValue, Map.Entry::getKey));
+
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
+            Response executeResponse = executeAlertingMonitor(monitorId, Collections.emptyMap());
+            Map<String, Object> executeResults = entityAsMap(executeResponse);
+
+            if (MonitorType.DOC_LEVEL_MONITOR.getValue().equals(monitor.get("monitor_type"))) {
+                String ruleCategory = ruleIdRuleCategoryMap.get(monitorId);
+                int noOfSigmaRuleMatches = ((List<Map<String, Object>>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0).size();
+                if (ruleCategory.toLowerCase(Locale.ROOT).equals(DetectorType.WINDOWS.getDetectorType().toLowerCase(Locale.ROOT))) {
+                    assertEquals(1, noOfSigmaRuleMatches);
+                } else if (ruleCategory.toLowerCase(Locale.ROOT).equals(DetectorType.TEST_WINDOWS.getDetectorType().toLowerCase(Locale.ROOT))){
+                    assertEquals(5, noOfSigmaRuleMatches);
+                }
+            } else {
+                List<Map<String, Object>> buckets = ((List<Map<String, Object>>)(((Map<String, Object>)((Map<String, Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get("result_agg")).get("buckets")));
+                Integer docCount = buckets.stream().mapToInt(it -> (Integer)it.get("doc_count")).sum();
+                assertEquals(5, docCount.intValue());
+                List<String> triggerResultBucketKeys = ((Map<String, Object>)((Map<String, Object>) ((Map<String, Object>)executeResults.get("trigger_results")).get(maxRuleId)).get("agg_result_buckets")).keySet().stream().collect(Collectors.toList());
+                assertEquals(List.of("2", "3"), triggerResultBucketKeys);
+            }
+        }
+
+        request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        hits = new ArrayList<>();
+
+        while (hits.size() == 0) {
+            hits = executeSearch(DetectorMonitorConfig.getAlertsIndex("windows"), request);
+        }
+        // Call GetAlerts API
+        Map<String, String> params = new HashMap<>();
+        params.put("detectorType", "windows");
+        Response getAlertsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.ALERTS_BASE_URI, params, null);
+        Map<String, Object> getAlertsBody = asMap(getAlertsResponse);
+
+        assertEquals(5, getAlertsBody.get("total_alerts"));
+
+        hits = new ArrayList<>();
+        while (hits.size() == 0) {
+            hits = executeSearch(DetectorMonitorConfig.getAlertsIndex("test_windows"), request);
+        }
+        // Call GetAlerts API
+        params.put("detectorType", "test_windows");
+        getAlertsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.ALERTS_BASE_URI, params, null);
+        getAlertsBody = asMap(getAlertsResponse);
+        // TODO enable asserts here when able
+        // 5 prepackaged rule matches for 5 documents + 1 custom doc rule + 1 custom bucket rule
+        Assert.assertEquals(7, getAlertsBody.get("total_alerts"));
+    }
+
+    public void testGetAlerts_byDetectorId_multipleDetectorTypes_success() throws IOException, InterruptedException {
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response response = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + windowsDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        response = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+
+        List<String> prepackagedRules = getRandomPrePackagedRules();
+        String testOpCode = "Test";
+        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String randomDocRuleId = createRule(randomRule(), "windows");
+
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId)),
+            prepackagedRules.stream().map(DetectorRule::new).collect(Collectors.toList()), List.of(DetectorType.TEST_WINDOWS, DetectorType.WINDOWS));
+
+        Detector detector = randomDetectorWithTriggers(input, List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(windowsDetectorType(), randomDetectorType()), List.of(), List.of(), List.of(), List.of())));
+
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+
+        String detectorId = responseBody.get("_id").toString();
+
+        String request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List<String> monitorIds = ((List<String>) (detectorMap).get("monitor_id"));
+        assertEquals(3, monitorIds.size());
+
+        indexDoc(index, "1", randomDoc(5, 3, testOpCode));
+        indexDoc(index, "2", randomDoc(2, 3, testOpCode));
+        indexDoc(index, "3", randomDoc(4, 3, testOpCode));
+        indexDoc(index, "4", randomDoc(6, 2, testOpCode));
+        indexDoc(index, "5", randomDoc(1, 1, testOpCode));
+
+        client().performRequest(new Request("POST", "_refresh"));
+        Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
+
+        Map<String, String> docLevelMonitorIdPerCategory = ((Map<String, String>)((Map<String, Object>)hit.getSourceAsMap().get("detector")).get("doc_monitor_id_per_category"));
+        // Swapping keys and values
+        Map<String, String> ruleIdRuleCategoryMap =  docLevelMonitorIdPerCategory.entrySet().stream().collect(Collectors.toMap(Map.Entry::getValue, Map.Entry::getKey));
+
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
+            Response executeResponse = executeAlertingMonitor(monitorId, Collections.emptyMap());
+            Map<String, Object> executeResults = entityAsMap(executeResponse);
+
+            if (MonitorType.DOC_LEVEL_MONITOR.getValue().equals(monitor.get("monitor_type"))) {
+                String ruleCategory = ruleIdRuleCategoryMap.get(monitorId);
+                int noOfSigmaRuleMatches = ((List<Map<String, Object>>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0).size();
+                if (ruleCategory.toLowerCase(Locale.ROOT).equals(DetectorType.WINDOWS.getDetectorType().toLowerCase(Locale.ROOT))) {
+                    assertEquals("Number of doc level rules for windows category not correct", 1, noOfSigmaRuleMatches);
+                } else if (ruleCategory.toLowerCase(Locale.ROOT).equals(DetectorType.TEST_WINDOWS.getDetectorType().toLowerCase(Locale.ROOT))){
+                    assertEquals("Number of doc level rules for test_windows category not correct", 5, noOfSigmaRuleMatches);
+                }
+            } else {
+                List<Map<String, Object>> buckets = ((List<Map<String, Object>>)(((Map<String, Object>)((Map<String, Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get("result_agg")).get("buckets")));
+                Integer docCount = buckets.stream().mapToInt(it -> (Integer)it.get("doc_count")).sum();
+                assertEquals("Number of documents in buckets not correct", 5, docCount.intValue());
+                List<String> triggerResultBucketKeys = ((Map<String, Object>)((Map<String, Object>) ((Map<String, Object>)executeResults.get("trigger_results")).get(maxRuleId)).get("agg_result_buckets")).keySet().stream().collect(Collectors.toList());
+                assertEquals("Number of triggers not correct", List.of("2", "3"), triggerResultBucketKeys);
+            }
+        }
+        // Call GetAlerts API
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+
+        boolean totalAlertsEqualToExpected = waitUntil(() -> {
+            try {
+                Response getAlertsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.ALERTS_BASE_URI, params, null);
+                Map<String, Object> getAlertsBody = asMap(getAlertsResponse);
+                // TODO enable asserts here when able
+                // one bucket level one custom doc level
+                int totalAlerts = (int) getAlertsBody.get("total_alerts");
+                return totalAlerts == 12;
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        });
+
+        assertTrue("Number of total alerts not correct", totalAlertsEqualToExpected);
+    }
+
     public void testGetAlerts_byDetectorType_multipleDetectors_success() throws IOException, InterruptedException {
         String index1 = createTestIndex(randomIndex(), windowsIndexMapping());
 
@@ -471,10 +716,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index1 + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index1 + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
         // index 2
         String index2 = createTestIndex("netflow_test", netFlowMappings());
@@ -483,10 +728,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index2 + "\"," +
-                        "  \"rule_topic\":\"netflow\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index2 + "\"," +
+                "  \"rule_topic\":\"netflow\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -501,23 +746,22 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String createdId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
         String monitorId1 = ((List<String>) ((Map<String, Object>) hit.getSourceAsMap().get("detector")).get("monitor_id")).get(0);
         // Detector 2 - NETWORK
         DetectorInput inputNetflow = new DetectorInput("windows detector for security analytics", List.of("netflow_test"), Collections.emptyList(),
-                getPrePackagedRules("network").stream().map(DetectorRule::new).collect(Collectors.toList()));
+            getPrePackagedRules("network").stream().map(DetectorRule::new).collect(Collectors.toList()), List.of(Detector.DetectorType.NETWORK));
         Detector detector2 = randomDetectorWithTriggers(
-                getPrePackagedRules("network"),
-                List.of(new DetectorTrigger(null, "test-trigger", "1", List.of("network"), List.of(), List.of(), List.of(), List.of())),
-                Detector.DetectorType.NETWORK,
-                inputNetflow
+            getPrePackagedRules("network"),
+            List.of(new DetectorTrigger(null, "test-trigger", "1", List.of("network"), List.of(), List.of(), List.of(), List.of())),
+            inputNetflow
         );
 
         createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector2));
@@ -528,12 +772,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         createdId = responseBody.get("_id").toString();
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
         String monitorId2 = ((List<String>) ((Map<String, Object>) hit.getSourceAsMap().get("detector")).get("monitor_id")).get(0);
@@ -555,11 +799,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         client().performRequest(new Request("POST", "_refresh"));
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -598,10 +842,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -617,12 +861,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String createdId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -636,20 +880,20 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(5, noOfSigmaRuleMatches);
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
             hits = executeSearch(DetectorMonitorConfig.getAlertsIndex(randomDetectorType()), request);
         }
 
-        List<String> alertIndices = getAlertIndices(detector.getDetectorType());
+        List<String> alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
         while(alertIndices.size() < 3) {
-            alertIndices = getAlertIndices(detector.getDetectorType());
+            alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
             Thread.sleep(1000);
         }
         assertTrue("Did not find 3 alert indices", alertIndices.size() >= 3);
@@ -667,10 +911,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -686,12 +930,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String createdId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + createdId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + createdId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -705,20 +949,20 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(5, noOfSigmaRuleMatches);
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
             hits = executeSearch(DetectorMonitorConfig.getAlertsIndex(randomDetectorType()), request);
         }
 
-        List<String> alertIndices = getAlertIndices(detector.getDetectorType());
+        List<String> alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
         while(alertIndices.size() < 3) {
-            alertIndices = getAlertIndices(detector.getDetectorType());
+            alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
             Thread.sleep(1000);
         }
         assertTrue("Did not find 3 alert indices", alertIndices.size() >= 3);
@@ -727,7 +971,7 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         updateClusterSetting(ALERT_HISTORY_RETENTION_PERIOD.getKey(), "1s");
 
         while(alertIndices.size() != 1) {
-            alertIndices = getAlertIndices(detector.getDetectorType());
+            alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
             Thread.sleep(1000);
         }
 
@@ -744,10 +988,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -763,12 +1007,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String detectorId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + detectorId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -784,11 +1028,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(5, noOfSigmaRuleMatches);
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -807,9 +1051,9 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         // Ack alert to move it to history index
         acknowledgeAlert(alertId, detectorId);
 
-        List<String> alertIndices = getAlertIndices(detector.getDetectorType());
+        List<String> alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
         while(alertIndices.size() < 3) {
-            alertIndices = getAlertIndices(detector.getDetectorType());
+            alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
             Thread.sleep(1000);
         }
         assertTrue("Did not find 3 alert indices", alertIndices.size() >= 3);
@@ -826,10 +1070,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
         // both req params and req body are supported
         createMappingRequest.setJsonEntity(
-                "{ \"index_name\":\"" + index + "\"," +
-                        "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
-                        "  \"partial\":true" +
-                        "}"
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
         );
 
         Response response = client().performRequest(createMappingRequest);
@@ -845,12 +1089,12 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         String detectorId = responseBody.get("_id").toString();
 
         String request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match\":{\n" +
-                "        \"_id\": \"" + detectorId + "\"\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
 
@@ -864,11 +1108,11 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         Assert.assertEquals(5, noOfSigmaRuleMatches);
 
         request = "{\n" +
-                "   \"query\" : {\n" +
-                "     \"match_all\":{\n" +
-                "     }\n" +
-                "   }\n" +
-                "}";
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
         hits = new ArrayList<>();
 
         while (hits.size() == 0) {
@@ -887,10 +1131,10 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         // Ack alert to move it to history index
         acknowledgeAlert(alertId, detectorId);
 
-        List<String> alertIndices = getAlertIndices(detector.getDetectorType());
+        List<String> alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
         // alertIndex + 2 alertHistory indices
         while(alertIndices.size() < 3) {
-            alertIndices = getAlertIndices(detector.getDetectorType());
+            alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
             Thread.sleep(1000);
         }
         assertTrue("Did not find 3 alert indices", alertIndices.size() >= 3);
@@ -909,5 +1153,158 @@ public class AlertsIT extends SecurityAnalyticsRestTestCase {
         getAlertsBody = asMap(getAlertsResponse);
         // 1 from alertIndex and 1 from history index
         Assert.assertEquals(2, getAlertsBody.get("total_alerts"));
+    }
+
+    public void testGetAlertsFromAllIndicesMultipleDetectorTypes() throws IOException, InterruptedException {
+        String testOpCode = "Test";
+        updateClusterSetting(ALERT_HISTORY_ROLLOVER_PERIOD.getKey(), "1s");
+        updateClusterSetting(ALERT_HISTORY_MAX_DOCS.getKey(), "1");
+
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response response = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+
+        List<String> prepackagedRules = getRandomPrePackagedRules();
+        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String randomDocRuleId = createRule(randomRule(), "windows");
+
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId)),
+            prepackagedRules.stream().map(DetectorRule::new).collect(Collectors.toList()), List.of(DetectorType.TEST_WINDOWS, DetectorType.WINDOWS));
+
+        Detector detector = randomDetectorWithTriggers(input, List.of(new DetectorTrigger(null, "test-trigger", "1", List.of(windowsDetectorType(), randomDetectorType()), List.of(), List.of(), List.of(), List.of())));
+
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+
+        String detectorId = responseBody.get("_id").toString();
+
+        String request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List<String> monitorIds = ((List<String>) (detectorMap).get("monitor_id"));
+        assertEquals(3, monitorIds.size());
+
+        indexDoc(index, "1", randomDoc(5, 3, testOpCode));
+        indexDoc(index, "2", randomDoc(2, 3, testOpCode));
+        indexDoc(index, "3", randomDoc(4, 3, testOpCode));
+        indexDoc(index, "4", randomDoc(6, 2, testOpCode));
+
+        client().performRequest(new Request("POST", "_refresh"));
+        Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
+
+        Map<String, String> docLevelMonitorIdPerCategory = ((Map<String, String>)((Map<String, Object>)hit.getSourceAsMap().get("detector")).get("doc_monitor_id_per_category"));
+        // Swapping keys and values
+        Map<String, String> ruleIdRuleCategoryMap =  docLevelMonitorIdPerCategory.entrySet().stream().collect(Collectors.toMap(Map.Entry::getValue, Map.Entry::getKey));
+
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
+            Response executeResponse = executeAlertingMonitor(monitorId, Collections.emptyMap());
+            Map<String, Object> executeResults = entityAsMap(executeResponse);
+
+            if (MonitorType.DOC_LEVEL_MONITOR.getValue().equals(monitor.get("monitor_type"))) {
+                String ruleCategory = ruleIdRuleCategoryMap.get(monitorId);
+                int noOfSigmaRuleMatches = ((List<Map<String, Object>>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0).size();
+                if (ruleCategory.toLowerCase(Locale.ROOT).equals(DetectorType.WINDOWS.getDetectorType().toLowerCase(Locale.ROOT))) {
+                    assertEquals("Number of doc level rules for windows category not correct", 1, noOfSigmaRuleMatches);
+                } else if (ruleCategory.toLowerCase(Locale.ROOT).equals(DetectorType.TEST_WINDOWS.getDetectorType().toLowerCase(Locale.ROOT))){
+                    assertEquals("Number of doc level rules for test_windows category not correct", 5, noOfSigmaRuleMatches);
+                }
+            } else {
+                List<Map<String, Object>> buckets = ((List<Map<String, Object>>)(((Map<String, Object>)((Map<String, Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get("result_agg")).get("buckets")));
+                Integer docCount = buckets.stream().mapToInt(it -> (Integer)it.get("doc_count")).sum();
+                assertEquals("Number of documents in buckets not correct", 4, docCount.intValue());
+                List<String> triggerResultBucketKeys = ((Map<String, Object>)((Map<String, Object>) ((Map<String, Object>)executeResults.get("trigger_results")).get(maxRuleId)).get("agg_result_buckets")).keySet().stream().collect(Collectors.toList());
+                assertEquals("Trigger results not correct", List.of("2", "3"), triggerResultBucketKeys);
+            }
+        }
+
+        request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        hits = new ArrayList<>();
+
+        while (hits.size() == 0) {
+            hits = executeSearch(DetectorMonitorConfig.getAlertsIndex("windows"), request);
+        }
+        // Call GetAlerts API
+        Map<String, String> params = new HashMap<>();
+        params.put("detectorType", "windows");
+        Response getAlertsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.ALERTS_BASE_URI, params, null);
+        Map<String, Object> getAlertsBody = asMap(getAlertsResponse);
+        // TODO enable asserts here when able
+        assertEquals("Number of total alerts for windows category not correct", 4, getAlertsBody.get("total_alerts"));
+
+        List<Map<String, Object>> alerts = (ArrayList<Map<String, Object>>) getAlertsBody.get("alerts");
+
+        for(Map<String, Object> alert: alerts) {
+            String alertId =(String) alert.get("id");
+            // Ack alert to move it to history index
+            acknowledgeAlert(alertId, detectorId);
+        }
+
+        hits = new ArrayList<>();
+        while (hits.size() == 0) {
+            hits = executeSearch(DetectorMonitorConfig.getAlertsIndex("test_windows"), request);
+        }
+        // Call GetAlerts API
+        params.put("detectorType", "test_windows");
+        getAlertsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.ALERTS_BASE_URI, params, null);
+        getAlertsBody = asMap(getAlertsResponse);
+        // TODO enable asserts here when able
+        Assert.assertEquals("Number of total alerts for test_windows category not correct", 6, getAlertsBody.get("total_alerts"));
+        /** TODO - uncomment once https://github.com/opensearch-project/alerting/pull/753 is merged
+        alerts = (ArrayList<Map<String, Object>>) getAlertsBody.get("alerts");
+
+        for(Map<String, Object> alert: alerts) {
+            String alertId =(String) alert.get("id");
+            // Ack alert to move it to history index
+            acknowledgeAlert(alertId, detectorId);
+        }
+
+        List<String> alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
+        // alertIndex + 2 alertHistory indices
+        while(alertIndices.size() < 3) {
+            alertIndices = getAlertIndices(detector.getDetectorTypes().get(0));
+            Thread.sleep(1000);
+        }
+        assertTrue("Did not find 3 alert indices", alertIndices.size() >= 3);
+
+        // Index another doc to generate new alert in alertIndex
+        indexDoc(index, "5", randomDoc(1, 1, testOpCode));
+
+        for(String monitorId: monitorIds) {
+            executeAlertingMonitor(monitorId, Collections.emptyMap());
+        }
+
+        client().performRequest(new Request("POST", DetectorMonitorConfig.getAlertsIndex(randomDetectorType()) + "/_refresh"));
+        getAlertsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.ALERTS_BASE_URI, params, null);
+        getAlertsBody = asMap(getAlertsResponse);
+
+        assertEquals("Number of alerts not correct", 9, getAlertsBody.get("total_alerts"));**/
     }
 }
